# Icicle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Utils.h  main.cpp
RCL/: ArchiveTable.cpp  ArchiveTable.h  ArtFile.h  Directory.cpp  Directory.h  DirectoryOffsetTable.cpp  DirectoryOffsetTable.h  File.cpp  File.h  FileTable.cpp  FileTable.h  Header.cpp  Header.h  RclFile.cpp  RclFile.h
RCL/Common/: IRawData.h
resources/: rcl.hexpat
src/: Utils.h  main.cpp  utils.h
src/RCL/: ArtFile.cpp  ArtFileEntry.cpp  ArtFileEntry.h  Directory.cpp  Directory.h  Header.cpp  Header.h  RclFile.cpp  RclFile.h
src/RCL/Common/: IRawData.h
src/rcl/: art_file.cpp  art_file.h  art_file_entry.cpp  art_file_entry.h  directory.cpp  directory.h  directory_offset_table.cpp  directory_offset_table.h  header.cpp  header.h  rcl_file.cpp  rcl_file.h
src/rcl/common/: raw_data_interface.h
